--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
 
   <body>
-    <h1>My projects.</h1>
+    <h1>Current projects.</h1>
     <a href="http://pteek.github.io/WebSpeechAPIdemo/">1. Web speech API demo (हिंदी supported.)</a>
   </body>
 </html>
